# LocalClip

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsModal.tsx
src/lib/: i18n.ts  transform.ts  util.ts
src/lib/__tests__/: transform.test.ts  util.test.ts
src/state/: ui.ts
